Security made by Vinicius

--- a/security.html
+++ b/security.html
@@ -67,10 +67,22 @@
 	                </ul>
 	            </div>
 	            <!-- /.navbar-collapse -->
+
+
 	        </div>
 	        <!-- /.container -->
 	    </nav>
 
+	    <br>
+	    <br>
+	    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    		<p>
+    			Devido ao grande ganho de importância atrelado às redes de computadores, inúmeros métodos foram criados para ludibriar as regras inerentes a esses ambientes visando tirar vantagens estratégicas ou financeiras. Contudo, diversos estudos vem sendo desenvolvidos com o intuito ampliar a proteção à rede e aos seus usuários. As SDNs por apresentarem uma abordagem distnta das redes de computadores tradicionais não possuíam, no momento de sua criação, os mecanismos de segurança já existentes na redes de computadores. Por conta disto, diversos trabalhos foram propostos visando adaptar estes mecanismos de segurança às SDNs e criar mecanismos que visem proteger a rede da exploração de vulnerabilidades intrínsecas a sua topologia
+    		</p>
+    		<p>
+    			As SDN são compostas por dois módulos são eles: o plano de dados (responsável pela requisição de um caminho ao plano de controle e pelo envio dos pacotes através do caminho fornecido pelo plano de controle) e o plano de controle (responsável pela gerência da topologia da rede por meio da estipulação dos caminhos que serão utilizados pelo plano de dados para enviar os pacotes). Levando em conta esta estrutura alguns ataques foram propostos dentre eles está o apresentado em [19]. Este estudo visava utilizar um Scanner de rede e, a partir de métricas estatísticas estimar se a rede alvo está utilizando SDN ou não. Caso a rede alvo seja uma SDN o atacante poderá então realizar um chamado “ataque de consumo de recursos” [19] que funciona por meio do envio de pacotes à rede e a consequência requisição exaustiva de caminhos para o fluxo de pacotes ao plano de controle. Levando em conta a topologia centralizada do plano de controle este ataque pode ser classificado como um  ataque DoS.
+    		</p>
+	    </div>
 
 	    <br><br><br><br><br><br><br>
 	    <!-- Footer -->
