Added introduction and reasons for a new network

--- a/index.html
+++ b/index.html
@@ -72,7 +72,21 @@
 	    </nav>
 
 
-	    <br><br><br><br><br><br><br>
+	    <br><br>
+
+	    <h2 align="center"> Introdução </h2>
+	    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	    	
+	    	<p>
+	    		<strong> Resumo</strong>: SDN ( <i> Software Definied Networking </i>) é uma arquitetura emergente, que tem como principais objetivos ser dinâmica, adaptável,  permitir que os administradores da rede gerenciem os seus serviços a partir de uma abstração de alto nível das funcionalidades e possuir uma relação custo benefício boa, tornando-se ideal  no cenário das aplicações atuais, que são dinâmicas e necessitam grande banda de rede. A principal característica desta rede é a separação entre o sistema que decide para onde o tráfego é enviado e os sistemas que direcionam o tráfego para o destino selecionado.
+	    	</p>
+	    	<br><br><br>
+	    	<p>
+	    		<strong> Direitos Autorais</strong>: "Este trabalho foi totalmente produzido pelos autores que declaram não terem violado os direitos autorais de terceiros, sejam eles pessoas físicas ou jurídicas. Havendo textos, tabelas e figuras transcritos de obras de terceiros com direitos autorais protegidos ou de domínio público tal como idéias e conceitos de terceiros, mesmo que sejam encontrados na Internet, os mesmos estão com os devidos créditos aos autores originais e estão incluídas apenas com o intuito de deixar o trabalho autocontido. O(s) autor(es) tem(êm) ciência dos Artigos 297 a 299 do Código Penal Brasileiro e também que o uso do artifício de copiar/colar texto de outras fontes e outras formas de plágio é um ato ilícito, condenável e passível de punição severa. No contexto da Universidade a punição não precisa se restringir à reprovação na disciplina e pode gerar um processo disciplinar que pode levar o(s) aluno(s) à suspensão;"
+	    	</p>
+	    </div>
+
+
 	    <!-- Footer -->
 	    <footer>
 	        <div class="container">
