--- a/newNetwork.html
+++ b/newNetwork.html
@@ -72,7 +72,22 @@
 	    </nav>
 
 
-	    <br><br><br><br><br><br><br>
+	    <br><br>
+
+	    <h2 align="center"> A necessidade por uma nova rede </h2>
+	    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+	    	<p>
+	    		Toda vez que uma nova tecnologia aparece e tenta ganhar espaço no mundo digital, surgem algumas dúvidas: “Vale a pena adotar a tecnologia nova?”, “A tecnologia atual não atende mais aos requisitos necessários?”, dentre outras. No caso do SDN, não podia ser diferente. Precisamos, então, entender o porquê das redes definidas por software merecerem ganhar a nossa atenção.
+	    	</p>	
+	    	<p>
+	    		As redes IP são as mais tradicionais e mais utilizadas atualmente. Apesar disso, elas são extremamente complexas e difíceis de gerenciar, uma vez que é bastante complicado configurar a rede de acordo com as políticas pré-definidas e reconfigurá-la quando ela apresenta falhas ou mudanças. Além disso, <strong> as atuais redes </strong> são integradas verticalmente, isto é, <strong> os planos de controle e de dados são agrupados. </strong>
+	    	</p>
+	    	<p>
+	    		A grande promessa das redes definidas por software (<strong>SDN</strong>) é <strong>quebrar essa integração vertical</strong>, separando a lógica de controle da rede dos roteadores e comutadores subjacentes, promovendo a centralização da lógica de controle da rede e introduzindo a habilidade de programar a rede. Dessa forma, ao separar o problema de controle da rede em pedaços menores e mais fáceis de serem resolvidos, essa rede se torna extremamente flexível, fácil de ser gerenciada e facilita na criação e introdução de abstrações no contexto de redes de computadores.
+	    	</p>
+	    </div>
+
 	    <!-- Footer -->
 	    <footer>
 	        <div class="container">
