--- a/security.html
+++ b/security.html
@@ -75,6 +75,7 @@
 
 	    <br>
 	    <br>
+	    <h2 align="center"> Segurança </h2>
 	    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     		<p>
     			Devido ao grande ganho de importância atrelado às redes de computadores, inúmeros métodos foram criados para ludibriar as regras inerentes a esses ambientes visando tirar vantagens estratégicas ou financeiras. Contudo, diversos estudos vem sendo desenvolvidos com o intuito ampliar a proteção à rede e aos seus usuários. As SDNs por apresentarem uma abordagem distnta das redes de computadores tradicionais não possuíam, no momento de sua criação, os mecanismos de segurança já existentes na redes de computadores. Por conta disto, diversos trabalhos foram propostos visando adaptar estes mecanismos de segurança às SDNs e criar mecanismos que visem proteger a rede da exploração de vulnerabilidades intrínsecas a sua topologia
