--- a/applications.html
+++ b/applications.html
@@ -7,7 +7,7 @@
 
 	    <!-- Bootstrap Core CSS -->
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
-
+        <link href="css/style.css" rel="stylesheet"> 
 	    <!-- Custom CSS -->
 	    <link href="css/clean-blog.min.css" rel="stylesheet">
 
@@ -70,7 +70,27 @@
 	        </div>
 	        <!-- /.container -->
 	    </nav>
-
+        <div id='container'>
+          </br></br>
+          <h2 align='center'> Aplicações</h2>
+          <div class="col-lg-8 col-lg-offset-2 col-md-offset-1">
+            <p>Como já visto, a principal aplicação da rede definida por Software é a programação da rede. Nesse quesito, o SDN torna permite que a rede seja mais flexível e além de facilitar a administração.</p>
+            <p>Uma das principais camadas da arquiterura do SDN é a Aplicação na Rede (<i>Network Applications</i>), é nela onde é implementado a parte logica e de controle que será traduzida em comandos para os comutadores, ditando assim, como serão realizados as rotinas e as transmissões de pacotes entre os roteadores e comutadores [<a href='#'>1</a>]. Por exemplo, a arquitetura do SDN torna possível a implementação de soluções de roteamento especialmente desenvolvidas para um ambiente particular, o controle de interações entre os diversos comutadores, oferecendo para os computadores, a eles ligados, a impressão de estarem conectados a somente um único comutador ou roteador.</p>
+            <p>A maioria das aplicações podem ser <strong>agrupadas em 5 categorias</strong> : Engenharia de tráfico, mobilidade e redes sem fio, monitoramento e medição, segurança e por fim, redes de centro de dados(<i>Data Center Networking</i>).</p>
+            <p>Entre vários cenários onde estão sendo adotadas a tecnologia do SDN e <i>OpenFlow</i>, temos :</p>
+              <ul>
+                <li>
+                  <p><strong>Controle de Acesso</strong></br>&nbsp;&nbsp;
+                  A visão da rede oferecida pelo controlador SDN permite que <strong>regras de acesso</strong> sejam desenvolvidas de acordo com informações mais especificas e que abrangem melhor o contexto aplicado. Além disso, torna-se mais fácil de se definir as rotas que serão adotadas para cada fluxo viabilizando a utilização de filtros especiais, e dispositivos de inspeção de pacotes e inclusive <i>proxies</i>. Um dos sistemas desenvolvidos foi o Ethane, baseado nesse sistema de controle de acesso.</p>
+                </li>
+                <li>
+                  <p><strong>Gerência de Redes [<a href="#">21</a>]</strong></br>
+                    &nbsp;&nbsp;Projetos como OMNI, o que tem como objetivo eferecer opções que podem simplificar a administração de redes <i>OpenFlow</i> através de uma <strong>interface de controle</strong> baseada em uma arquitetura orientada a serviços.</p>
+                  <p>&nbsp;&nbsp;Além desse, pesquisadores da UFAM trabalham no desenvolvimento de técnicas de Inteligencia Artificial integradas com Redes Definidas por Software. Basicamente, o sistema oferece um ponto focal sobre a rede o qual as técnicas de detecção de anomalias ou padrões frequentes podem ser aplicadas para se detectar vários tipos de comportamento, como diversos tipos de ataques, e dessa forma podem ser tomadas medidas necessárias para a prevenção.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
 
 	    <br><br><br><br><br><br><br>
 	    <!-- Footer -->
