--- a/references.html
+++ b/references.html
@@ -7,7 +7,7 @@
 
 	    <!-- Bootstrap Core CSS -->
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
-
+        <link href="css/style.css" rel="stylesheet">
 	    <!-- Custom CSS -->
 	    <link href="css/clean-blog.min.css" rel="stylesheet">
 
