--- a/architecture.html
+++ b/architecture.html
@@ -73,7 +73,7 @@
 
 <br><br>
 
-	    <h2 align="center"> Conceitos </h2>
+	    <h2 align="center"> Arquitetura </h2>
 	    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 	    	
 	    	<p>
