--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	                    <span class="icon-bar"></span>
 	                    <span class="icon-bar"></span>
 	                </button>
-	                <!-- <a class="navbar-brand" href="index.html" style="color: black;">Introdução</a> -->
+	                <a class="navbar-brand" href="index.html" style="color: black;">SDN</a>
 	            </div>
 
 	            <!-- Collect the nav links, forms, and other content for toggling -->
@@ -74,8 +74,25 @@
 
 	    <br><br>
 
-	    <h2 align="center"> Introdução </h2>
+	    <h2 align="center"> Redes Definidas por Software (SDN) </h2>
 	    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+	    	<div>
+	    		<div align="center">UFRJ - Universidade Federal do Rio de Janeiro</div>
+	    		<div align="left">
+	    			<div><strong>Alunos:</strong></div>
+	    			<div>Lucas de Carvalho Gomes</div>
+	    			<div>Marcos Seefelder de Assis Araujo</div>
+	    			<div>Pamela Tabak</div>
+	    			<div>Pedro Santos Eusébio</div>
+	    			<div>Vinícius Silva Campos</div>
+	    		</div>
+	    		<div align="right">
+	    			<div><strong>Professores:</strong></div>
+	    			<div>Otto Carlos Muniz Bandeira Duarte</div>
+	    			<div>Luís Henrique Maciel Kosmalski Costa</div>
+	    		</div>
+	    	</div>
 	    	
 	    	<p>
 	    		<strong> Resumo</strong>: SDN ( <i> Software Definied Networking </i>) é uma arquitetura emergente, que tem como principais objetivos ser dinâmica, adaptável,  permitir que os administradores da rede gerenciem os seus serviços a partir de uma abstração de alto nível das funcionalidades e possuir uma relação custo benefício boa, tornando-se ideal  no cenário das aplicações atuais, que são dinâmicas e necessitam grande banda de rede. A principal característica desta rede é a separação entre o sistema que decide para onde o tráfego é enviado e os sistemas que direcionam o tráfego para o destino selecionado.
