--- a/references.html
+++ b/references.html
@@ -41,7 +41,7 @@
 	                        <a href="index.html" style="color: black;">Introdução</a>
 	                    </li>
 	                    <li>
-	                        <a href="newNetwork.html" style="color: black;">Uma Nova Rede</a>
+	                        <a href="motivation.html" style="color: black;">Motivação</a>
 	                    </li>
 	                    <li>
 	                        <a href="concept.html" style="color: black;">Conceito</a>
@@ -71,8 +71,37 @@
 	        <!-- /.container -->
 	    </nav>
 
-
-	    <br><br><br><br><br><br><br>
+	    <br>
+	    <br>
+	    <h2 align="center"> Bibliografia </h2>
+	    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	    	<p id="1">[1] Diego Kreutz et al; Software-Defined Networking: A Comprehensive Survey.</p>
+	    	<p id="2">[2] McKeown, N. et al; A Network in a Laptop: Rapid Prototyping for Software-Defined Networks</p>
+	    	<p id="3">[3] Keith Kirkpatrick; Software-Defined Networking (Communications of the ACM, Volume 56, Issue 9, September 2013, Pages 16-19) </p>
+	    	<p id="4">[4] Monsanto, C. et al Composing Software-Defined Networks. 10th USENIX Symposium on Networked Systems Design and Implementation (NSDI ’13)</p>
+	    	<p id="5">[5] Seugwon Shin et al; FRESCO: Modular Composable Security Services for Software-Defined Networks</p>
+	    	<p id="6">[6] Sezer, S. ; CSIT, Queen's Univ. Belfast, Belfast, UK ; Scott-Hayward, S. ; Chouhan, P.K. ; Fraser, B. Are we ready for SDN? Implementation challenges for software-defined networks</p> 
+	    	<p id="7">[7] McKeown, N. et al ; OpenFlow: enabling innovation in campus networks.</p>
+	    	<p id="8">[8] Bakshi, K.; Considerations for Software Defined Networking (SDN): Approaches and use cases.</p>
+	    	<p id="9">[9] Mendonca, M; Obracka, K; Turletti, T; The case for software-defined networking in heterogeneous networked environments.</p>
+	    	<p id="10">[10] Andreas Voellmy; Junchang Wang; Scalable Software Defined Network Controllers.</p>
+	    	<p id="11">[11] Yeganeh, S.H.; Tootoonchian, A.; Ganjali, Y.; On scalability of software-defined networking.</p>
+	    	<p id="12">[12] Hyojoon Kim; Feamster, N.; Improving network management with software defined networking.</p>
+	    	<p id="13">[13] Bing Wang; Yao Zheng; Wenjing Lou; Y. Thomas Hou; DDoS attack protection in the era of cloud computing and Software-Defined Networking.</p>
+	    	<p id="14">[14] John Sonchack; Adam J. Aviv; Eric Keller; Jonathan M. Smith; POSTER: OFX: Enabling OpenFlow Extensions for Switch-Level Security Applications.</p>
+	    	<p id="15">[15] Nen-Fu Huang; Chuang Wang; I-Ju Liao; Che-Wei Lin; Chia-Nan Kao; An OpenFlow-based collaborative intrusion prevention system for cloud networking.</p>
+	    	<p id="16">[16] "Software-Defined Networking (SDN) Definition". Open Networking Foundation. Retrieved 26 October 2014.</p>
+	    	<p id="17">[17] "Software-Defined Networking: The New Norm for Networks”. Open Networking Foundation. April 13, 2012. Retrieved August 22, 2013.</p>
+	    	<p id="18">[18] "SDN Architecture Overview". Open Networking Foundation. Retrieved 22 November 2014.</p>
+	    	<p id="19">[19] Seungwon Shin; Guofei Gu; “Attacking Software-Defined Networks: A First Feasibility Study”.</p>
+	    	<p id="20">[20] Rothenberg, Christian Esteve, et al. "OpenFlow e redes definidas por software: um novo paradigma de controle e inovação em redes de pacotes." Cad. CPqD Tecnologia, Campinas 7.1 (2010): 65-76.</p>
+	    	<p id="21">[21] Guedes, Dorgival, et al. “Redes Definidas por Software: uma abordagem sistêmica para o desenvolvimento de pesquisas em Redes de Computadores”. Minicursos do Simpósio Brasileiro de Redes de Computadores - SBRC 2012, p. 160–210.</p>
+	    	<p id="22">[22] Feamster, N. et al. “The Road To SDN: An Intellectual History of Programmable Networks”.</p>
+	    	<p id="23">[23]  S. Shin, V. Yegneswaran, P. Porras, and G. Gu. “AVANT-GUARD: Scalable and Vigilant Switch Flow Management in Software-defined Networks. In Proc. ACM SIGSAC Conference on Computer and Communications Security (CCS), 2013.”</p>
+	    	<p id="24">[24] Doug Marschke, Jeff Doyle and Pete Moyer. “Software Defined Networking (SDN): Anatomy of OpenFlow Volume I.”</p>
+	    	<p id="25">[25] Pate, P. “NFV and SDN: What’s the Difference?”</p>
+	    </div>
+	    
 	    <!-- Footer -->
 	    <footer>
 	        <div class="container">
