--- a/conclusion.html
+++ b/conclusion.html
@@ -40,8 +40,8 @@
 	                    <li>
 	                        <a href="index.html" style="color: black;">Introdução</a>
 	                    </li>
-	                    <li>
-	                        <a href="newNetwork.html" style="color: black;">Uma Nova Rede</a>
+	                   <li>
+	                        <a href="motivation.html" style="color: black;">Motivação</a>
 	                    </li>
 	                    <li>
 	                        <a href="concept.html" style="color: black;">Conceito</a>
