--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	                        <a href="index.html" style="color: black;">Introdução</a>
 	                    </li>
 	                    <li>
-	                        <a href="newNetwork.html" style="color: black;">Uma Nova Rede</a>
+	                        <a href="motivation.html" style="color: black;">Motivação</a>
 	                    </li>
 	                    <li>
 	                        <a href="concept.html" style="color: black;">Conceito</a>
