--- a/motivation.html
+++ b/motivation.html
@@ -41,7 +41,7 @@
 	                        <a href="index.html" style="color: black;">Introdução</a>
 	                    </li>
 	                    <li>
-	                        <a href="newNetwork.html" style="color: black;">Uma Nova Rede</a>
+	                        <a href="motivation.html" style="color: black;">Motivação</a>
 	                    </li>
 	                    <li>
 	                        <a href="concept.html" style="color: black;">Conceito</a>
@@ -74,7 +74,7 @@
 
 	    <br><br>
 
-	    <h2 align="center"> A necessidade por uma nova rede </h2>
+	    <h2 align="center"> Motivação </h2>
 	    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 	    	<p>
